added links to social-icon in index.html

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     
     <section id="aside">
         <div class="social-icon">
-            <li class="icon-1"><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li class="icon-2"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li class="icon-3"><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li class="icon-1"><a href="https://www.facebook.com/michael.abaniwo"><i class="fa fa-facebook"></i></a></li>
+            <li class="icon-2"><a href="https://www.linkedin.com/in/michael-abaniwo-521620193/"><i class="fa fa-linkedin"></i></a></li>
+            <li class="icon-3"><a href="https://twitter.com/_codedr"><i class="fa fa-twitter"></i></a></li>
         </div>
     </section>
 
