made changes to responsiveness

--- a/home.html
+++ b/home.html
@@ -255,7 +255,7 @@
 
     <section id="footer-bottom">
         <div class="inventor">
-            <h4>&copy; 2021 by @_code_dr. Proudly supported by <a href="https://www.udemy.com">Udemy</a>, <a href="https://www.udacity.com/">Udacity</a>, <a href="https://www.wix.com/">Wix</a> and Diagonal World</h4>
+            <h4>&copy; 2021 by @_codedr. Proudly supported by <a href="https://www.udemy.com">Udemy</a>, <a href="https://www.udacity.com/">Udacity</a>, <a href="https://www.wix.com/">Wix</a> and Diagonal World</h4>
         </div>
     </section>
 </body>
