--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikha'el Times</title>
-    <link rel="stylesheet" href="land.css">
-    <link rel="stylesheet" href="https://unsplash.com/photos/9SoCnyQmkzI?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://www.freepik.com">
+   <link rel="stylesheet" href="land.css">
+   <link rel="stylesheet" href="https://unsplash.com/photos/9SoCnyQmkzI?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://www.freepik.com">
     <style>
         /* The device with borders */
         .smartphone {
@@ -171,16 +171,16 @@
         </div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+               <li><a href="home.html">Home</a></li>
             </ul>
         </nav>
     </section>
     
     <section id="aside">
         <div class="social-icon">
-            <li class="icon-1"><a href="https://www.facebook.com/michael.abaniwo"><i class="fa fa-facebook"></i></a></li>
-            <li class="icon-2"><a href="https://www.linkedin.com/in/michael-abaniwo-521620193/"><i class="fa fa-linkedin"></i></a></li>
-            <li class="icon-3"><a href="https://twitter.com/_codedr"><i class="fa fa-twitter"></i></a></li>
+           <li class="icon-1"><a href="https://www.facebook.com/michael.abaniwo"><i class="fa fa-facebook"></i></a></li>
+           <li class="icon-2"><a href="https://www.linkedin.com/in/michael-abaniwo-521620193/"><i class="fa fa-linkedin"></i></a></li>
+           <li class="icon-3"><a href="https://twitter.com/_codedr"><i class="fa fa-twitter"></i></a></li>
         </div>
     </section>
 
@@ -195,7 +195,7 @@
 
     <section id="footer">
         <div class="bottom">
-            <h3>Brought to you by @_code_dr &copy;2021</h3>
+            <h3>Brought to you by @_codedr &copy;2021</h3>
         </div>
     </section>
 </body>
